--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "firebase": "^5.3.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
