--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "firebase": "^5.3.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "randomstring": "^1.1.5",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-firebaseui": "^3.1.2",
