--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,6 @@
     "bootstrap": "^4.1.3",
     "firebase": "^5.3.0",
     "get-urls": "^8.0.0",
-    "is-image-url": "^1.1.8",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "randomstring": "^1.1.5",
@@ -20,8 +19,7 @@
     "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
     "redux-firestore": "^0.5.7",
-    "redux-thunk": "^2.3.0",
-    "url-regex": "^4.1.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
